--- a/cxone-work-item-form/to_host/TEST AUTOCOMPLETE.html
+++ b/cxone-work-item-form/to_host/TEST AUTOCOMPLETE.html
@@ -5,6 +5,7 @@
                 id="modalTitle">Employee Details</div>
 
             <div style="position: relative;width: 320px;">
+                <input id="wi_search" type="text" hidden/>
                 <label
                     style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;"
                     for="wi_search"> Employee Name:</label>
