--- a/cxone-work-item-form/to_host/TEST WORK ITEM.html
+++ b/cxone-work-item-form/to_host/TEST WORK ITEM.html
@@ -281,7 +281,7 @@
                             <span>📧 COACHING REQUEST</span>
                         </button>
 
-                        <button onclick="document.getElementById('wi_status').value='updateEmployee';" style="padding: 16px 12px;border: none;border-radius: 4px;font-size: 11px;font-weight: bold;cursor: pointer;transition: all 0.3s ease;text-transform: uppercase;letter-spacing: 0.3px;display: flex;align-items: center;justify-content: center;position: relative;background: #ffffff;color: {global:primaryColor};border: 2px solid {global:primaryColor};" id="autocompleteBtn"
+                        <button onclick="document.getElementById('wi_status').value='updateEmployee';" style="padding: 16px 12px;border: none;border-radius: 4px;font-size: 11px;font-weight: bold;cursor: pointer;transition: all 0.3s ease;text-transform: uppercase;letter-spacing: 0.3px;display: flex;align-items: center;justify-content: center;position: relative;background: #ffffff;color: {global:primaryColor};border: 2px solid {global:primaryColor};" id="updateEmployeeBtn"
                             onmouseover="this.style.background='{global:primaryColor}';this.style.color='#ffffff';"
                             onmouseout="this.style.background='#ffffff';this.style.color='{global:primaryColor}';">
                             <span>🚪 Update Employee</span>
