feat: add SWF, MAD WI changes

--- a/cxone-work-item-form/to_host/CWF WORK ITEM.html
+++ b/cxone-work-item-form/to_host/CWF WORK ITEM.html
@@ -116,143 +116,8 @@
                     <div style="overflow-x: auto;max-height: calc(100vh - 250px);">
                         <table class="passenger-table" style="width: 100%; border-collapse: collapse; font-size: 13px;">
                             <thead id="tableHeader" style="background: {global:primaryColor}; color: white; position: sticky; top: 0; z-index: 10;">
-                                <tr>
-                                    <th
-                                        style="position: sticky; min-width: 200px; padding: 12px 10px; text-align: left; font-weight: 600; border-right: 1px solid rgba(255, 255, 255, 0.2); white-space: nowrap;">
-                                        Field Name</th>
-                                    <th
-                                        style="padding: 12px 10px; text-align: left; font-weight: 600; border-right: 1px solid rgba(255, 255, 255, 0.2); white-space: nowrap;">
-                                        PAX 01</th>
-                                    <th
-                                        style="padding: 12px 10px; text-align: left; font-weight: 600; border-right: 1px solid rgba(255, 255, 255, 0.2); white-space: nowrap;">
-                                        PAX 02</th>
-                                    <th
-                                        style="padding: 12px 10px; text-align: left; font-weight: 600; border-right: 1px solid rgba(255, 255, 255, 0.2); white-space: nowrap;">
-                                        PAX 03</th>
-                                    <th
-                                        style="padding: 12px 10px; text-align: left; font-weight: 600; border-right: 1px solid rgba(255, 255, 255, 0.2); white-space: nowrap;">
-                                        PAX 04</th>
-                                    <th
-                                        style="padding: 12px 10px; text-align: left; font-weight: 600; border-right: 1px solid rgba(255, 255, 255, 0.2); white-space: nowrap;">
-                                        PAX 05</th>
-                                </tr>
                             </thead>
                             <tbody id="tableBody">
-                                <tr>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: #f8f9fa;">Total
-                                        Cancel Fees</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">398.04</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">275.50</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">150.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;"></td>
-                                </tr>
-                                <tr>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: #f8f9fa;">Total
-                                        Waived</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">398.04</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">275.50</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">150.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;"></td>
-                                </tr>
-                                <tr>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: #f8f9fa;">Net
-                                        Cancelled Fee</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;"></td>
-                                </tr>
-                                <tr>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: #f8f9fa;">Waive
-                                        Reason CD</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">PL</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">PL</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">PL</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;"></td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;"></td>
-                                </tr>
-                                <tr>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: #f8f9fa;">Waive
-                                        Reason Description</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">POLAR ERROR
-                                    </td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">POLAR ERROR
-                                    </td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">POLAR ERROR
-                                    </td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;"></td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;"></td>
-                                </tr>
-                                <tr>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: #f8f9fa;">Cancel Code
-                                    </td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">D</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">D</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">D</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;"></td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;"></td>
-                                </tr>
-                                <tr>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: #f8f9fa;">Air Cancel
-                                        Fees</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">398.04</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">275.50</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">150.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;"></td>
-                                </tr>
-                                <tr>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: #f8f9fa;">Package
-                                        Cancel Fees</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;"></td>
-                                </tr>
-                                <tr>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: #f8f9fa;">Transfer
-                                        Cancel Fees</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;"></td>
-                                </tr>
-                                <tr>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: #f8f9fa;">NCF Charges
-                                        Cancel Fees</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;"></td>
-                                </tr>
-                                <tr>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: #f8f9fa;">
-                                        Non-Refundable Premium/Waiver</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">0.00</td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;"></td>
-                                </tr>
-                                <tr>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: #f8f9fa;">Open Date
-                                    </td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">04/22/2025
-                                    </td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">04/22/2025
-                                    </td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">04/22/2025
-                                    </td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;">04/22/2025
-                                    </td>
-                                    <td style="padding: 10px;border: 1px solid #e0e0e0;background: white;"></td>
-                                </tr>
                             </tbody>
                         </table>
                     </div>
@@ -304,6 +169,8 @@
             </div>
         </footer>
     </body>
+    <script type="module"
+        src="https://shubhamrathi1224.github.io/webFormCXone/cxone-work-item-form/to_host/wi_cwf_data.js"></script>
 
     </html>
 </data>
