--- a/cxone-work-item-form/to_host/mad_work_item.html
+++ b/cxone-work-item-form/to_host/mad_work_item.html
@@ -61,15 +61,15 @@
                         <div style="display: flex;flex-direction: column;gap: 4px;">
                             <div style="display: flex;justify-content: space-between;padding: 8px;background: #ffffff;border-radius: 4px;border-left: 3px solid {global:secondaryColor};">
                                 <span style="font-size: 11px;color: #666666;font-weight: 500;">Voyage Number</span>
-                                <span style="font-size: 13px;font-weight: bold;color: {global:secondaryColor};">U534</span>
+                                <span style="font-size: 13px;font-weight: bold;color: {global:secondaryColor};" id="voyageNumberValue">U534</span>
                             </div>
                             <div style="display: flex;justify-content: space-between;padding: 8px;background: #ffffff;border-radius: 4px;border-left: 3px solid {global:secondaryColor};">
                                 <span style="font-size: 11px;color: #666666;font-weight: 500;">Booking Number</span>
-                                <span style="font-size: 13px;font-weight: bold;color: {global:secondaryColor};">3C6WXG</span>
+                                <span style="font-size: 13px;font-weight: bold;color: {global:secondaryColor};" id="bookingNumberValue">3C6WXG</span>
                             </div>
                             <div style="display: flex;justify-content: space-between;padding: 8px;background: #ffffff;border-radius: 4px;border-left: 3px solid {global:secondaryColor};">
                                 <span style="font-size: 11px;color: #666666;font-weight: 500;">Currency</span>
-                                <span style="font-size: 13px;font-weight: bold;color: {global:secondaryColor};">USD</span>
+                                <span style="font-size: 13px;font-weight: bold;color: {global:secondaryColor};" id="currencyValue">USD</span>
                             </div>
                         </div>
                     </div>
