feat: add MAD table config and data change

--- a/cxone-work-item-form/to_host/TEST UPDATE_EMPLOYEE.html
+++ b/cxone-work-item-form/to_host/TEST UPDATE_EMPLOYEE.html
@@ -29,5 +29,5 @@
         </div>
     </div>
     <script type="module"
-        src="https://shubhamrathi1224.github.io/webFormCXone/cxone-work-item-form/dynamicSearchableAutocomplete/index.js"></script>
+        src="https://shubhamrathi1224.github.io/webFormCXone/cxone-work-item-form/to_host/updateEmployee.js.js"></script>
 </data>
