--- a/cxone-work-item-form/to_host/cwf_work_item.html
+++ b/cxone-work-item-form/to_host/cwf_work_item.html
@@ -56,7 +56,7 @@
                 <div style="background: #ffffff;border: 1px solid #ccc;border-radius: 4px;box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
                     <div style="background: {global:linearGradient};padding: 8px;font-size: 12px;font-weight: bold;letter-spacing: 0.5px;text-transform: uppercase;color: #ffffff;border-bottom: 2px solid #FF6633;">
                         <span>Employee Details</span>
-                        <button onclick="document.getElementById('wi_status').value='updateEmployee';" style="cursor: pointer;border: none;background: white; float: right;" id="updateEmployeeBtn">
+                        <button onclick="document.getElementById('wi_status').value='updateEmployee';" style="cursor: pointer;border: none;background: transparent; float: right;" id="updateEmployeeBtn">
                             <span>✏️</span>
                         </button>
                     </div>
