--- a/cxone-work-item-form/to_host/cwf_work_item.html
+++ b/cxone-work-item-form/to_host/cwf_work_item.html
@@ -68,11 +68,12 @@
                             <p style="margin:0;display: flex; justify-content: space-between;"><span
                                     style="color: #666666;">Team:</span> <span>Devl</span></p>
                             <p style="margin:0;display: flex; justify-content: space-between;"><span
-                                    style="color: #666666;">Role:</span> <span>Reservation
-                                    Specialist</span></p>
+                                    style="color: #666666;">Report To:</span> <span>Wade Smith</span></p>
                             <p style="margin:0;display: flex; justify-content: space-between;"><span
                                     style="color: #666666;">User
                                     Id:</span> <span>Dev</span>
+                            <p style="margin:0;display: flex; justify-content: space-between;"><span
+                                    style="color: #666666;">Is active:</span> <span>Yes</span>
                             </p>
                         </div>
                     </div>
@@ -140,7 +141,6 @@
                 </div>
             </section>
         </main>
-
         <footer style="background: #e8f0f6;padding: 16px 24px;box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);flex-shrink: 0;border-top: 3px solid {global:accentColor};position: sticky;top: 100%;">
             <div style="display: flex;justify-content: space-between;align-items: center;max-width: 1800px;margin: 0 auto;width: 100%;">
                 <div style="font-size: 13px;color: {global:primaryColor};font-style: italic;font-weight: 500;">{global:brand} - {global:footerTagline}</div>
