feat: add dynamic sub-item icons change

--- a/cxone-work-item-form/to_host/cwf_work_item.html
+++ b/cxone-work-item-form/to_host/cwf_work_item.html
@@ -147,6 +147,7 @@
     </body>
     <script type="module"
         src="https://shubhamrathi1224.github.io/webFormCXone/cxone-work-item-form/to_host/cwf_work_item.js"></script>
-
+    <!-- <script type="module"
+        src="./cwf_work_item.js"></script> -->
     </html>
 </data>
