feat: add code fix change

--- a/cxone-work-item-form/to_host/mad_work_item.html
+++ b/cxone-work-item-form/to_host/mad_work_item.html
@@ -146,6 +146,11 @@
     </body>
     <script type="module"
         src="https://shubhamrathi1224.github.io/webFormCXone/cxone-work-item-form/to_host/mad_work_item.js"></script>
+    <!-- <script type="module"
+        src="./cwf_work_item.js"></script> -->
+    <!-- <script type="module"
+        src="https://aem-stage.hollandamerica.com/content/dam/nice/all/test-wi-scripts/cwf_work_item.js">
+        </script> -->
 
     </html>
 </data>
