--- a/cxone-work-item-form/to_host/TEST UPDATE_EMPLOYEE_2.html
+++ b/cxone-work-item-form/to_host/TEST UPDATE_EMPLOYEE_2.html
@@ -7,23 +7,23 @@
             <div style="position: relative;width: 320px;display: grid;gap: 24px 16px;margin-bottom: 16px;">
                 <div style="position: relative;"id="firstNameField">
                     <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_employeeFirstName">First Name:</label>
-                    <input type="text" name="wi_employeeFirstName" value="{wi_employeeFirstName}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_employeeFirstName" maxlength="25" placeholder="Enter other coaching details..."/>
+                    <input type="text" name="wi_employeeFirstName" value="{wi_employeeFirstName}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_employeeFirstName" maxlength="25" placeholder="Enter First Name..."/>
                 </div>
                 <div style="position: relative;"id="lastNameField">
                     <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_employeeLastName">Last Name:</label>
-                    <input type="text" name="wi_employeeLastName" value="{wi_employeeLastName}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_employeeLastName" maxlength="25" placeholder="Enter other coaching details..."/>
+                    <input type="text" name="wi_employeeLastName" value="{wi_employeeLastName}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_employeeLastName" maxlength="25" placeholder="Enter Last Name..."/>
                 </div>
                 <div style="position: relative;"id="polarIdField">
                     <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_employeePolarId">Polar ID:</label>
-                    <input type="text" name="wi_employeePolarId" value="{wi_employeePolarId}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_employeePolarId" maxlength="25" placeholder="Enter other coaching details..."/>
+                    <input type="text" name="wi_employeePolarId" value="{wi_employeePolarId}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_employeePolarId" maxlength="25" placeholder="Enter Polar ID..."/>
                 </div>
             </div>
             <div style="display: flex;gap: 16px;justify-content: flex-end;margin-top: 16px;">
-                <input type="hidden" name="wi_updateEmployeeStatus" id="wi_updateEmployeeStatus">
-                <button name="submit" onclick="document.getElementById('wi_updateEmployeeStatus').value='cancel';"
+                <input type="hidden" name="wi_coachCorrStatus" id="wi_coachCorrStatus">
+                <button name="submit" onclick="document.getElementById('wi_coachCorrStatus').value='cancel';"
                     style="padding: 12px;border-radius: 4px; font-size: 11px;font-weight: bold;cursor: pointer;text-transform: uppercase;letter-spacing: 0.3px;background: transparent;color: #666666;border: 1px solid #ccc;"
                     id="cancelModalBtn">Cancel</button>
-                <button name="submit" onclick="document.getElementById('wi_updateEmployeeStatus').value='confirm';"
+                <button name="submit" onclick="document.getElementById('wi_coachCorrStatus').value='confirm';"
                     style="padding: 12px;border-radius: 4px;font-size: 11px;font-weight: bold;cursor: pointer;text-transform: uppercase;letter-spacing: 0.3px;background: {global:secondaryColor};color: #ffffff;"
                     id="confirmBtn">Confirm</button>
             </div>
