feat: fix update employee screen change

--- a/cxone-work-item-form/to_host/TEST UPDATE_EMPLOYEE.html
+++ b/cxone-work-item-form/to_host/TEST UPDATE_EMPLOYEE.html
@@ -5,7 +5,7 @@
                 id="modalTitle">Employee Details</div>
 
             <div style="position: relative;width: 320px;">
-                <input id="wi_search" name="wi_search" type="text" hidden/>
+                <input id="wi_newAgentId" name="wi_newAgentId" type="text" hidden/>
                 <label
                     style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;"
                     for="search"> Employee Name:</label>
@@ -29,5 +29,5 @@
         </div>
     </div>
     <script type="module"
-        src="https://shubhamrathi1224.github.io/webFormCXone/cxone-work-item-form/to_host/updateEmployee.js.js"></script>
+        src="https://shubhamrathi1224.github.io/webFormCXone/cxone-work-item-form/to_host/updateEmployee.js"></script>
 </data>
