feat: add common work item change

--- a/cxone-work-item-form/to_host/TEST COACHING REQUEST.html
+++ b/cxone-work-item-form/to_host/TEST COACHING REQUEST.html
@@ -7,34 +7,34 @@
                 <div style="position: relative;">
                     <p style="margin-bottom: 6px;font-weight: 500;font-size: 16px;color: black; ">Concern Item/s:</p>
                     <div>
-                        <p><input type="checkbox" id="lacksBookingHistoryComments" value="lacksBookingHistoryComments" name="wi_coachCorrReason"> Lacks
+                        <p><input type="checkbox" id="lacksBookingHistoryComments" value="Lacks Booking History Comments" name="wi_coachCorrReason"> Lacks
                             Booking
                             History Comments</p>
-                        <p><input type="checkbox" id="lacksCommentsInCancelWaiverScreen" value="lacksCommentsInCancelWaiverScreen" name="wi_coachCorrReason">
+                        <p><input type="checkbox" id="lacksCommentsInCancelWaiverScreen" value="Lacks Comments In Cancel Waiver Screen" name="wi_coachCorrReason">
                             Lacks
                             Comments in Cancel Waiver Screen</p>
-                        <p><input type="checkbox" id="lacksCommentsOnManualAdjScreen" value="lacksCommentsOnManualAdjScreen" name="wi_coachCorrReason"> Lacks
+                        <p><input type="checkbox" id="lacksCommentsOnManualAdjScreen" value="Lacks Comments On Manual Adj Screen" name="wi_coachCorrReason"> Lacks
                             Comments on Manual Adj Screen</p>
-                        <p><input type="checkbox" id="lacksFCCHistoryComments" value="lacksFCCHistoryComments" name="wi_coachCorrReason"> Lacks FCC
+                        <p><input type="checkbox" id="lacksFCCHistoryComments" value="Lacks FCC History Comments" name="wi_coachCorrReason"> Lacks FCC
                             History
                             Comments</p>
-                        <p><input type="checkbox" id="outsideOfPolicyProcedure" value="outsideOfPolicyProcedure" name="wi_coachCorrReason"> Outside of
+                        <p><input type="checkbox" id="outsideOfPolicyProcedure" value="Outside Of Policy And/Or Procedure" name="wi_coachCorrReason"> Outside of
                             Policy
                             and/or Procedure</p>
-                        <p><input type="checkbox" id="dataEntryError" value="dataEntryError" name="wi_coachCorrReason"> Data Entry Error</p>
-                        <p><input type="checkbox" id="otherCoaching" value="otherCoaching" name="wi_coachCorrReason" onclick="
+                        <p><input type="checkbox" id="dataEntryError" value="Data Entry Error" name="wi_coachCorrReason"> Data Entry Error</p>
+                        <p><input type="checkbox" id="otherCoaching" value="Other Coaching" name="wi_coachCorrReason" onclick="
                         document.getElementById('otherCoachingDetailsField').hidden = !this.checked;
                         "> Other</p>
                     </div>
                 </div>
                 <div style="position: relative;" hidden id="otherCoachingDetailsField">
-                    <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachCorrComments">Other Coaching Details:</label>
-                    <input type="text" name="wi_coachCorrComments" value="{wi_coachCorrComments}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_coachCorrComments" maxlength="25" placeholder="Enter other coaching details..."/>
+                    <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachCorrOtherDetails">Other Coaching Details:</label>
+                    <input type="text" name="wi_coachCorrOtherDetails" value="{wi_coachCorrOtherDetails}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_coachCorrOtherDetails" maxlength="25" placeholder="Enter other coaching details..."/>
                 </div>
                 <div style="position: relative;">
-                    <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachComments">Additional Comments:</label>
-                    <textarea id="wi_coachComments" name="wi_coachComments" style="width: 100%;height: 60px;resize: vertical;border-radius: 4px;border: 1px solid #999999;"
-                        placeholder="Enter additional comments...">{wi_coachComments}</textarea>
+                    <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachCorrComments">Message To Agent:</label>
+                    <textarea id="wi_coachCorrComments" name="wi_coachCorrComments" style="width: 100%;height: 60px;resize: vertical;border-radius: 4px;border: 1px solid #999999;"
+                        placeholder="Enter additional comments...">{wi_coachCorrComments}</textarea>
                 </div>
                 <div style="position: relative;">
                     <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachCorrNVComments">Non-Visible Message:</label>
