--- a/cxone-work-item-form/to_host/TEST PASS REVIEW.html
+++ b/cxone-work-item-form/to_host/TEST PASS REVIEW.html
@@ -17,8 +17,8 @@
                     </div>
                 </div>
                 <div style="position: relative;" hidden id="otherCoachingDetailsField">
-                    <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachCorrComments">Other Review Details:</label>
-                    <input type="text" name="wi_coachCorrComments" value="{wi_coachCorrComments}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_coachCorrComments" maxlength="25" placeholder="Enter other coaching details..."/>
+                    <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachCorrOtherDetails">Other Review Details:</label>
+                    <input type="text" name="wi_coachCorrOtherDetails" value="{wi_coachCorrOtherDetails}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_coachCorrOtherDetails" maxlength="25" placeholder="Enter other coaching details..."/>
                 </div>
             </div>
             <div style="display: flex;gap: 16px;justify-content: flex-end;margin-top: 16px;">
