feat: add code fix change

--- a/cxone-work-item-form/to_host/work_item.html
+++ b/cxone-work-item-form/to_host/work_item.html
@@ -29,7 +29,7 @@
                     <div style="padding: 8px;background: #e8f0f6;">
                         <div class="work-item-type">
                             <div style="font-size: 18px;color: {global:primaryColor};text-transform: uppercase;font-weight: bold;margin-bottom: 8px;" class="label" id="workItemLabel">Cancellation Waive Fee</div>
-                            <div style="font-size: 13px;font-weight: bold;color: #6b7280;margin-bottom: 4px;" class="title">Sub-Items:</div>
+                            <div style="font-size: 13px;font-weight: bold;color: #6b7280;margin-bottom: 4px;" id="subItemTitle" class="title">Sub-Items:</div>
                         </div>
                         <div id="subItemList" style="display: flex;flex-direction: column;gap: 4px;">
                         </div>
