--- a/cxone-work-item-form/to_host/TEST COACHING REQUEST.html
+++ b/cxone-work-item-form/to_host/TEST COACHING REQUEST.html
@@ -34,7 +34,7 @@
                 <div style="position: relative;">
                     <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachCorrComments">Message To Agent:</label>
                     <textarea id="wi_coachCorrComments" name="wi_coachCorrComments" style="width: 100%;height: 60px;resize: vertical;border-radius: 4px;border: 1px solid #999999;"
-                        placeholder="Enter additional comments...">{wi_coachCorrComments}</textarea>
+                        placeholder="Enter message...">{wi_coachCorrComments}</textarea>
                 </div>
                 <div style="position: relative;">
                     <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachCorrNVComments">Non-Visible Message:</label>
