feat: add code fix change

--- a/cxone-work-item-form/to_host/work_item.html
+++ b/cxone-work-item-form/to_host/work_item.html
@@ -28,7 +28,7 @@
                     <input type="text" hidden id="wi_historyAvailable" name="wi_historyAvailable" value="{wi_historyAvailable}" />
                     <div style="background: {global:linearGradient};padding: 8px;font-size: 12px;font-weight: bold;letter-spacing: 0.5px;text-transform: uppercase;color: #ffffff;border-bottom: 2px solid #FF6633;">
                         <span>Work Item Details</span>
-                        <button onclick="document.getElementById('wi_status').value='history';" style="cursor: pointer;border: none;background: transparent; float: right;" id="historyBtn">
+                        <button onclick="document.getElementById('wi_status').value='history';" style="color: {global:primaryColor};cursor: pointer;border: 1px solid;border-radius: 8px; float: right;" id="historyBtn">
                             History
                         </button>
                     </div>
@@ -81,21 +81,6 @@
                                     style="color: #666666;">User Id:</span> <span>{global:wi_issuerUserId}</span>
                             <p style="margin:0;display: flex; justify-content: space-between;"><span
                                     style="color: #666666;">Is active:</span> <span>{global:wi_issuerIsActive}</span></p>
-                        </div>
-                    </div>
-                </div>
-
-                <div style="background: #ffffff;border: 1px solid #ccc;border-radius: 4px;box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-                    <div style="background: {global:linearGradient};padding: 8px;font-size: 12px;font-weight: bold;letter-spacing: 0.5px;text-transform: uppercase;color: #ffffff;border-bottom: 2px solid #FF6633;">History</div>
-                    <div style="padding: 8px;background: #e8f0f6;">
-                        <div style="font-size: 14px;display: flex;flex-direction: column;gap: 8px;font-weight: bold;color: {global:primaryColor};">
-                            <p style="margin:0;display: flex; justify-content: space-between;"><span
-                                    style="color: #666666;">Name:</span> <span>Will Doe</span>
-                            </p>
-                            <p style="margin:0;display: flex; justify-content: space-between;"><span
-                                    style="color: #666666;">Role:</span> <span>Sr. Reservation
-                                    Specialist</span>
-                            </p>
                         </div>
                     </div>
                 </div>
